<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VoLTE_Dialer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sendlog">Send log</string>
    <string name="str_noemailclient">No email clients installed.</string>
    <string name="str_emailclientchoice">Send email using &#8230;</string>
       
    <!--  SETTINGS -->
    <string name="pref_mt_msisdn">MSISDN / URI to call to: </string>
    <string name="pref_receiver">Mode</string>
    <string name="pref_mt_role">Receiver (answers calls)</string>
    <string name="pref_mo_role">Sender (sets up calls)</string>
    <string name="pref_callduration">Call duration: </string>
    <string name="pref_duration_20s">20 s</string>
    <string name="pref_duration_60s">1 m</string>
    <string name="pref_duration_300s">5 m</string>
    <string name="pref_duration_1800s">30 m</string>
    <string name="pref_duration_3600s">1 h</string>
    <string name="pref_duration_7200s">2 h</string>
    <string name="pref_timebetweencalls">Wait time between calls: </string>
    <string name="pref_sel_10s">10 s</string>
    <string name="pref_sel_20s">20 s</string>
    <string name="pref_sel_60s">1 m</string>
    <string name="pref_sel_300s">5 m</string>
    <string name="pref_sel_1800s">30 m</string>
    <string name="pref_sendurl">Email address or URL to send logs: </string>
    <string name="pref_invalidurl">Invalid format.\nMust be email or URL.</string>
    <string name="pref_deletelogfile">Delete log after sending it</string>
    <string name="pref_bgmode">Background loging</string>
    
    <!--  MAIN ACTIVITY -->
    <string name="str_role">Role:</string>
    <string name="str_role_mo">Sender (MO calls)</string>
    <string name="str_role_mt">Receiver (MT calls)</string>
    <string name="str_role_bg">Running in Background Mode.</string>
    <string name="str_send_bg">Send app to background</string>
    <string name="str_callnum">Call number:</string>
    <string name="str_timetonextcall">Next call in</string>
    <string name="str_seconds">seconds</string>
    <string name="str_dsstopped">ERROR: Dialer service stopped</string>
    <string name="str_rsstopped">ERROR: Receiver service stopped</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_bg">Send to background</string>
    <string name="btn_disabled">Disabled</string>
     
</resources>
