<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference
	    android:key="pref_key_mt_msisdn"
	    android:title="@string/pref_mt_msisdn"
	    android:defaultValue="" />
	<ListPreference 
	    android:key="pref_key_call_duration"
	    android:title="@string/pref_callduration"
	    android:entries="@array/sel_duration"
	    android:entryValues="@array/sel_duration_intarray"
	    android:defaultValue="20" />
	<ListPreference 
	    android:key="pref_key_time_between_calls"
	    android:title="@string/pref_timebetweencalls"
	    android:entries="@array/sel_time"
	    android:entryValues="@array/sel_time_intarray" 
	    android:defaultValue="20" />
	<EditTextPreference
	    android:key="pref_key_sendlogsurl"
	    android:title="@string/pref_sendurl"
	    android:defaultValue="" />
	<CheckBoxPreference
	    android:key="pref_key_deletelogfile"
	    android:title="@string/pref_deletelogfile"
	    android:defaultValue="true" />
</PreferenceScreen>
